admin page for services completed

--- a/assets/pages.scss
+++ b/assets/pages.scss
@@ -1,5 +1,5 @@
 .main-section.hide-menu {
-    margin-left: 50px;
+	margin-left: 50px;
   }
   
 .main-section {
@@ -9,6 +9,7 @@
   margin-bottom: 30px;
 	transition: margin-left 0.3s
 }
+
 
 .col {
 	width: 100%;
@@ -29,4 +30,13 @@
 
 .home_field {
 	padding: 8rem 10rem 0 ;
+}
+
+.page_unit {
+	padding:7rem 4rem 0 5rem;
+
+}
+
+.create-button-space{
+	padding-top: 2rem;
 }
