responsive check in-progress

--- a/assets/responsive.scss
+++ b/assets/responsive.scss
@@ -424,4 +424,16 @@
     }
 
   }
+
+  .thefirmBody {
+    text-align: center;
+  }
+
+  .about-us {
+    margin-bottom: 0 !important;
+  }
+
+.second_section {
+    padding-bottom: 1rem;
+}
 }
