--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1182,7 +1182,8 @@ h1 {
 
 .second_section {
   background-image: url("/img/full-bloom.png");
-  padding-bottom: 6rem;
+  // padding-bottom: 6rem;
+  padding: 3rem 0;
 }
 
 @import "responsive.scss";
@@ -1247,7 +1248,8 @@ h1 {
 
 
 .services.is-uppercase.is-size-3{
-  padding: 3rem 0rem 2rem 2.275rem;
+  // padding: 3rem 0rem 2rem 2.275rem;
+  padding-left: 2rem;
   color: black;
   font-size: 1.6rem;
   font-weight: 600;
