--- a/assets/responsive.scss
+++ b/assets/responsive.scss
@@ -322,14 +322,25 @@
 
   .columns {
     text-align: center;
+    margin-left: 0 !important;  
+    margin-right: 0 !important; 
+    margin-top: 0 !important;
   }
 
-  // .profileContent{
-  //     display: flex;
-  //     justify-content: center;
-  //     width: 300px;
-  //     flex-direction: column;
-  // }
+  .about{
+    
+    padding: .5rem !important;
+
+  }
+
+  .has-text-white.has-text-centered.copyright{
+
+    padding-top: 1.5rem !important;
+  }
+
+  .section.about_us {
+  padding: 0 0 2.5rem 0 !important;
+}
 
   .imageBlock
     {
@@ -456,6 +467,8 @@
 
 .is-uppercase.is-size-3{
   text-align: center !important;
+  padding-left: 0 !important;
+
 }
 
 .services.is-uppercase.is-size-3{
