--- a/assets/navarbar.scss
+++ b/assets/navarbar.scss
@@ -1,6 +1,6 @@
 .navbar {
-  background-color: transparent; 
-  // background-color: black;
+  // background-color: transparent; 
+  background-color: black;
 }
 .field.has-addons {
   padding-top: 18px !important;
